lab/lab2/code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error CompSt
    9       | error SEMI
   10       | error ExtDef
   11       | Specifier error CompSt

   12 ExtDecList: VarDec
   13           | VarDec COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT OptTag LC DefList error RC

   19 OptTag: ID
   20       | ε

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | ε

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | error Stmt
   42     | Exp error
   43     | IF LP error RP Stmt
   44     | IF LP error RP Stmt ELSE Stmt
   45     | WHILE LP error RP Stmt

   46 DefList: Def DefList
   47        | ε

   48 Def: Specifier DecList SEMI
   49    | Specifier DecList error SEMI
   50    | Specifier error SEMI

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | Exp ASSIGNOP error
   74    | Exp AND error
   75    | Exp OR error
   76    | Exp RELOP error
   77    | Exp PLUS error
   78    | Exp MINUS error
   79    | Exp STAR error
   80    | Exp DIV error
   81    | LP error RP
   82    | LP Exp error
   83    | MINUS error
   84    | NOT error
   85    | ID LP error RP
   86    | Exp LB error RB

   87 Args: Exp COMMA Args
   88     | Exp
   89     | error COMMA Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 10 11 18 24 27 40 41 42 43 44 45 49 50 73 74 75 76 77 78 79 80 81 82 83 84 85 86 89
    INT <Node> (258) 23 71
    FLOAT <Node> (259) 72
    ID <Node> (260) 19 21 22 25 26 27 66 67 69 70 85
    TYPE <Node> (261) 14
    COMMA <Node> (262) 13 28 52 87 89
    DOT <Node> (263) 69
    SEMI <Node> (264) 4 5 7 9 34 36 40 48 49 50
    RELOP <Node> (265) 58 76
    ASSIGNOP <Node> (266) 54 55 73
    PLUS <Node> (267) 59 77
    MINUS <Node> (268) 60 64 78 83
    STAR <Node> (269) 61 79
    DIV <Node> (270) 62 80
    AND <Node> (271) 56 74
    OR <Node> (272) 57 75
    NOT <Node> (273) 65 84
    LP <Node> (274) 25 26 37 38 39 43 44 45 63 66 67 81 82 85
    RP <Node> (275) 25 26 27 37 38 39 43 44 45 63 66 67 81 85
    LB <Node> (276) 23 24 68 86
    RB <Node> (277) 23 24 68 86
    LC <Node> (278) 16 18 31
    RC <Node> (279) 16 18 31
    IF <Node> (280) 37 38 43 44
    ELSE <Node> (281) 38 44
    WHILE <Node> (282) 39 45
    STRUCT <Node> (283) 16 17 18
    RETURN <Node> (284) 36
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <Node> (32)
        on left: 1
        on right: 0
    ExtDefList <Node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <Node> (34)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 10
    ExtDecList <Node> (35)
        on left: 12 13
        on right: 4 13
    Specifier <Node> (36)
        on left: 14 15
        on right: 4 5 6 7 11 30 48 49 50
    StructSpecifier <Node> (37)
        on left: 16 17 18
        on right: 15
    OptTag <Node> (38)
        on left: 19 20
        on right: 16 18
    Tag <Node> (39)
        on left: 21
        on right: 17
    VarDec <Node> (40)
        on left: 22 23 24
        on right: 12 13 23 24 30 53 54
    FunDec <Node> (41)
        on left: 25 26 27
        on right: 6
    VarList <Node> (42)
        on left: 28 29
        on right: 25 28
    ParamDec <Node> (43)
        on left: 30
        on right: 28 29
    CompSt <Node> (44)
        on left: 31
        on right: 6 8 11 35
    StmtList <Node> (45)
        on left: 32 33
        on right: 31 32
    Stmt <Node> (46)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 32 37 38 39 41 43 44 45
    DefList <Node> (47)
        on left: 46 47
        on right: 16 18 31 46
    Def <Node> (48)
        on left: 48 49 50
        on right: 46
    DecList <Node> (49)
        on left: 51 52
        on right: 48 49 52
    Dec <Node> (50)
        on left: 53 54
        on right: 51 52
    Exp <Node> (51)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 34 36 37 38 39 42 54 55 56 57 58 59 60 61 62 63 64 65 68 69 73 74 75 76 77 78 79 80 82 86 87 88 89
    Args <Node> (52)
        on left: 87 88 89
        on right: 66 87


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • CompSt
    9       | error • SEMI
   10       | error • ExtDef

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    SEMI    shift, and go to state 9
    LC      shift, and go to state 10
    STRUCT  shift, and go to state 3

    ExtDef           go to state 11
    Specifier        go to state 7
    StructSpecifier  go to state 8
    CompSt           go to state 12


State 2

   14 Specifier: TYPE •

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT • OptTag LC DefList RC
   17                | STRUCT • Tag
   18                | STRUCT • OptTag LC DefList error RC

    ID  shift, and go to state 13

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error SEMI
   11       | Specifier • error CompSt

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    ExtDecList  go to state 21
    VarDec      go to state 22
    FunDec      go to state 23


State 8

   15 Specifier: StructSpecifier •

    $default  reduce using rule 15 (Specifier)


State 9

    9 ExtDef: error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 10

   31 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 8
    DefList          go to state 25
    Def              go to state 26


State 11

   10 ExtDef: error ExtDef •

    $default  reduce using rule 10 (ExtDef)


State 12

    8 ExtDef: error CompSt •

    $default  reduce using rule 8 (ExtDef)


State 13

   19 OptTag: ID •
   21 Tag: ID •

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 14

   16 StructSpecifier: STRUCT OptTag • LC DefList RC
   18                | STRUCT OptTag • LC DefList error RC

    LC  shift, and go to state 27


State 15

   17 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 17 (StructSpecifier)


State 16

    0 $accept: Program $end •

    $default  accept


State 17

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 18

    7 ExtDef: Specifier error • SEMI
   11       | Specifier error • CompSt

    SEMI  shift, and go to state 28
    LC    shift, and go to state 10

    CompSt  go to state 29


State 19

   22 VarDec: ID •
   25 FunDec: ID • LP VarList RP
   26       | ID • LP RP
   27       | ID • error RP

    error  shift, and go to state 30
    LP     shift, and go to state 31

    COMMA  reduce using rule 22 (VarDec)
    SEMI   reduce using rule 22 (VarDec)
    LB     reduce using rule 22 (VarDec)


State 20

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 21

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 32


State 22

   12 ExtDecList: VarDec •
   13           | VarDec • COMMA ExtDecList
   23 VarDec: VarDec • LB INT RB
   24       | VarDec • LB error RB

    COMMA  shift, and go to state 33
    LB     shift, and go to state 34

    $default  reduce using rule 12 (ExtDecList)


State 23

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 10

    CompSt  go to state 35


State 24

   48 Def: Specifier • DecList SEMI
   49    | Specifier • DecList error SEMI
   50    | Specifier • error SEMI

    error  shift, and go to state 36
    ID     shift, and go to state 37

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 25

   31 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 41
    INT     shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    LC      shift, and go to state 10
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 51
    StmtList  go to state 52
    Stmt      go to state 53
    Exp       go to state 54


State 26

   46 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 8
    DefList          go to state 55
    Def              go to state 26


State 27

   16 StructSpecifier: STRUCT OptTag LC • DefList RC
   18                | STRUCT OptTag LC • DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 8
    DefList          go to state 56
    Def              go to state 26


State 28

    7 ExtDef: Specifier error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 29

   11 ExtDef: Specifier error CompSt •

    $default  reduce using rule 11 (ExtDef)


State 30

   27 FunDec: ID error • RP

    RP  shift, and go to state 57


State 31

   25 FunDec: ID LP • VarList RP
   26       | ID LP • RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 58
    STRUCT  shift, and go to state 3

    Specifier        go to state 59
    StructSpecifier  go to state 8
    VarList          go to state 60
    ParamDec         go to state 61


State 32

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 33

   13 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 62
    VarDec      go to state 22


State 34

   23 VarDec: VarDec LB • INT RB
   24       | VarDec LB • error RB

    error  shift, and go to state 63
    INT    shift, and go to state 64


State 35

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 36

   50 Def: Specifier error • SEMI

    SEMI  shift, and go to state 65


State 37

   22 VarDec: ID •

    $default  reduce using rule 22 (VarDec)


State 38

   23 VarDec: VarDec • LB INT RB
   24       | VarDec • LB error RB
   53 Dec: VarDec •
   54    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 34

    $default  reduce using rule 53 (Dec)


State 39

   48 Def: Specifier DecList • SEMI
   49    | Specifier DecList • error SEMI

    error  shift, and go to state 67
    SEMI   shift, and go to state 68


State 40

   51 DecList: Dec •
   52        | Dec • COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 51 (DecList)


State 41

   40 Stmt: error • SEMI
   41     | error • Stmt

    error   shift, and go to state 41
    INT     shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44
    SEMI    shift, and go to state 70
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    LC      shift, and go to state 10
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50

    CompSt  go to state 51
    Stmt    go to state 71
    Exp     go to state 54


State 42

   71 Exp: INT •

    $default  reduce using rule 71 (Exp)


State 43

   72 Exp: FLOAT •

    $default  reduce using rule 72 (Exp)


State 44

   66 Exp: ID • LP Args RP
   67    | ID • LP RP
   70    | ID •
   85    | ID • LP error RP

    LP  shift, and go to state 72

    $default  reduce using rule 70 (Exp)


State 45

   64 Exp: MINUS • Exp
   83    | MINUS • error

    error  shift, and go to state 73
    INT    shift, and go to state 42
    FLOAT  shift, and go to state 43
    ID     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47

    Exp  go to state 74


State 46

   65 Exp: NOT • Exp
   84    | NOT • error

    error  shift, and go to state 75
    INT    shift, and go to state 42
    FLOAT  shift, and go to state 43
    ID     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47

    Exp  go to state 76


State 47

   63 Exp: LP • Exp RP
   81    | LP • error RP
   82    | LP • Exp error

    error  shift, and go to state 77
    INT    shift, and go to state 42
    FLOAT  shift, and go to state 43
    ID     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47

    Exp  go to state 78


State 48

   37 Stmt: IF • LP Exp RP Stmt
   38     | IF • LP Exp RP Stmt ELSE Stmt
   43     | IF • LP error RP Stmt
   44     | IF • LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 49

   39 Stmt: WHILE • LP Exp RP Stmt
   45     | WHILE • LP error RP Stmt

    LP  shift, and go to state 80


State 50

   36 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 42
    FLOAT  shift, and go to state 43
    ID     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47

    Exp  go to state 81


State 51

   35 Stmt: CompSt •

    $default  reduce using rule 35 (Stmt)


State 52

   31 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 82


State 53

   32 StmtList: Stmt • StmtList

    error   shift, and go to state 41
    INT     shift, and go to state 42
    FLOAT   shift, and go to state 43
    ID      shift, and go to state 44
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    LP      shift, and go to state 47
    LC      shift, and go to state 10
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    RETURN  shift, and go to state 50

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 51
    StmtList  go to state 83
    Stmt      go to state 53
    Exp       go to state 54


State 54

   34 Stmt: Exp • SEMI
   42     | Exp • error
   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   86    | Exp • LB error RB

    error     shift, and go to state 84
    DOT       shift, and go to state 85
    SEMI      shift, and go to state 86
    RELOP     shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    AND       shift, and go to state 93
    OR        shift, and go to state 94
    LB        shift, and go to state 95


State 55

   46 DefList: Def DefList •

    $default  reduce using rule 46 (DefList)


State 56

   16 StructSpecifier: STRUCT OptTag LC DefList • RC
   18                | STRUCT OptTag LC DefList • error RC

    error  shift, and go to state 96
    RC     shift, and go to state 97


State 57

   27 FunDec: ID error RP •

    $default  reduce using rule 27 (FunDec)


State 58

   26 FunDec: ID LP RP •

    $default  reduce using rule 26 (FunDec)


State 59

   30 ParamDec: Specifier • VarDec

    ID  shift, and go to state 37

    VarDec  go to state 98


State 60

   25 FunDec: ID LP VarList • RP

    RP  shift, and go to state 99


State 61

   28 VarList: ParamDec • COMMA VarList
   29        | ParamDec •

    COMMA  shift, and go to state 100

    $default  reduce using rule 29 (VarList)


State 62

   13 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 13 (ExtDecList)


State 63

   24 VarDec: VarDec LB error • RB

    RB  shift, and go to state 101


State 64

   23 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 102


State 65

   50 Def: Specifier error SEMI •

    $default  reduce using rule 50 (Def)


State 66

   54 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 42
    FLOAT  shift, and go to state 43
    ID     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47

    Exp  go to state 103


State 67

   49 Def: Specifier DecList error • SEMI

    SEMI  shift, and go to state 104


State 68

   48 Def: Specifier DecList SEMI •

    $default  reduce using rule 48 (Def)


State 69

   52 DecList: Dec COMMA • DecList

    ID  shift, and go to state 37

    VarDec   go to state 38
    DecList  go to state 105
    Dec      go to state 40


State 70

   40 Stmt: error SEMI •

    $default  reduce using rule 40 (Stmt)


State 71

   41 Stmt: error Stmt •

    $default  reduce using rule 41 (Stmt)


State 72

   66 Exp: ID LP • Args RP
   67    | ID LP • RP
   85    | ID LP • error RP

    error  shift, and go to state 106
    INT    shift, and go to state 42
    FLOAT  shift, and go to state 43
    ID     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46
    LP     shift, and go to state 47
    RP     shift, and go to state 107

    Exp   go to state 108
    Args  go to state 109


State 73

   83 Exp: MINUS error •

    $default  reduce using rule 83 (Exp)


State 74

   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   64    | MINUS Exp •
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   86    | Exp • LB error RB

    DOT   shift, and go to state 85
    STAR  shift, and go to state 91
    DIV   shift, and go to state 92
    LB    shift, and go to state 95

    $default  reduce using rule 64 (Exp)


State 75

   84 Exp: NOT error •

    $default  reduce using rule 84 (Exp)


State 76

   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   65    | NOT Exp •
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   86    | Exp • LB error RB

    DOT  shift, and go to state 85
    LB   shift, and go to state 95
